# MyHairSim

./: .gitignore
Dependencies/: CMakeLists.txt
src/: CMakeLists.txt  Camera.cpp  Camera.h  ComputeShader.cpp  ComputeShader.h  DrawingShader.h  Entity.cpp  Entity.h  Hair.cpp  Hair.h  PathConfig.h.in  Shader.cc  Shader.h  Sphere.h  Window.cpp  Window.h  main.cpp
src/Shaders/: HairComputeShader.glsl  HairFragmentShader.glsl  HairGeometryShader.glsl  HairVertexShader.glsl
